Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.2 (unreleased)

    Bugs fixed

      - Updated Zope 3 to bugfix release 3.3.1.

  Zope 2.10.2 beta 1 (2007/01/14)

    Bugs fixed

      - Fixed Collector #2190: Calls to
        zope.security.management.checkPermission aren't rerouted to
        Zope 2's security policy.

        NOTE: If you already have a Zope 2.10 instance running, you
        will either have to recreate it or add the following lines to
        the end of the etc/site.zcml file::

          <securityPolicy
                component="Products.Five.security.FiveSecurityPolicy" />

      - Fixed Collector #2223: Evaluation of booleans in TALES and the
        'default' variable.

      - Reverted backward-incompatible fix for Collector #2191.

      - Fixed the creation of lib/python/Zope2/version.txt

      - added Python 2.4.4 as optimal Python version to 'configure'

      - the ZopePageTemplate implementation now uses unicode
        internally.  Non-unicode instances are migrated on-the-fly to
        unicode. However this will work only properly for ZPT
        instances formerly encoded as utf-8 or ISO-8859-15. For other
        encodings you might set the environment variable
        ZPT_REFERRED_ENCODING to insert your preferred encoding in
        front of utf-8 and ISO-8859-15 within the encoding sniffer
        code. In addition there is a new 'output_encodings' property
        that controls the conversion from/to unicode for WebDAV/FTP
        operations.

      - the ZPT implementation has now a configurable option in order
        how to deal with UnicodeDecodeErrors. A custom
        UnicodeEncodingConflictResolver can be configured through ZCML
        (see Products/PageTemplates/(configure.zcml,
        unicodeconflictresolver.py, interfaces.py)

  Zope 2.10.1 (2006-11-22)

    Bugs fixed
